# streamlit-elements

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
streamlit_elements/: __init__.py  dev.py  version.py
streamlit_elements/core/: callback.py  context.py  element.py  exceptions.py  format.py  frame.py  module.py  render.py
streamlit_elements/frontend/: .gitignore  next.config.js  package-lock.json  package-lock.json.bak  package.json
streamlit_elements/frontend/components/: ElementsApp.tsx  ElementsLoading.tsx  ElementsResizer.tsx  ElementsTheme.tsx
streamlit_elements/frontend/components/modules/charts/: Echarts.tsx  Nivo.tsx
streamlit_elements/frontend/components/modules/dashboard/: Dashboard.tsx  Grid.tsx
streamlit_elements/frontend/components/modules/dom/: HTML.tsx  SVG.tsx
streamlit_elements/frontend/components/modules/editors/: Monaco.tsx
streamlit_elements/frontend/components/modules/events/: Hotkey.tsx  Interval.tsx
streamlit_elements/frontend/components/modules/media/: Player.tsx
streamlit_elements/frontend/components/modules/mui/: Elements.tsx  Icons.tsx  Lab.tsx
streamlit_elements/frontend/components/modules/table/: CustomTable.tsx
streamlit_elements/frontend/pages/: index.tsx
streamlit_elements/frontend/types/: global.d.ts  module.d.ts
streamlit_elements/modules/: __init__.py  callbacks.py  charts.py  dashboard.py  dom.py  echarts.py  editors.py  events.py  html.py  media.py  mui.py  nivo.py  table.py
