[metadata]
name = streamlit-elements
version = attr: streamlit_elements.__version__
description = React Components for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://share.streamlit.io/okld/streamlit-gallery/main?p=elements
url = https://github.com/okld/streamlit-elements
author = okld
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    streamlit >= 1.4.0
